<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    android:clickable="true"
    android:focusable="true"
    tools:context=".issue"
    tools:visibility="visible">


    <TextView
        android:id="@+id/textView"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/raise_complaint_here"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_employee_name"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#8d4"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.094"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/issue"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_employee_issue"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#8d4"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="#fff"
        android:textColorHint="#8d4"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issue"
        app:layout_constraintVertical_bias="0.094"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/loc"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_location"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#8d4"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/send"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:onClick="addUser"
        android:text="@string/send"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="MissingConstraints,UnknownId,UsingOnClickInXml" />

    <EditText
        android:id="@+id/date"
        android:layout_width="351dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/enter_date_dd_mm_yy"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#8d4"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loc"
        app:layout_constraintVertical_bias="0.228"
        tools:ignore="TextFields" />


</androidx.constraintlayout.widget.ConstraintLayout>